# jbw-app-creation

./: .gitignore  README.md  ROADMAP.md  build-salaries-report.txt  darko-debug.txt  draft-debug.txt  index.html  package-lock.json  package.json  probe-capholds-out.txt  probe-contracts-out.txt  probe-darko-fields-out.txt  probe-darko-history-out.txt  probe-darko-out.txt  probe-fresh-out.txt  probe-futures-out.txt  probe-returners-out.txt  probe-ss-out.txt  repeater-debug.txt  signings-debug.txt  swish-draft-table.html  swish-probe-output.txt  swish-roster-table.html  swish-team-sample.html  swish-tpe-table.html  tw-debug.txt  vite.config.ts
ct-rate-engine/: .gitignore  README.md  home.example.json  pyproject.toml  requirements.txt
ct-rate-engine/engine/: __init__.py  __main__.py  api.py  models.py  quote.py  rating.py
ct-rate-engine/extractor/: __init__.py  cli.py  draft.py  heuristics.py  ocr.py  pdf_tables.py
ct-rate-engine/scraper/: __init__.py  __main__.py  browser.py  cli.py  config.py  filing.py  index.py  models.py  results.py  search.py  selectors.py
ct-rate-engine/tests/: conftest.py  test_engine_math.py  test_extractor_heuristics.py  test_scraper_index.py
ct-rate-engine/tests/fixtures/: synthetic_carrier.json
data-src/: SalarySwish.xlsx
scripts/: build-aging-curve.mjs  build-darko.mjs  build-draftorder.mjs  build-salaries.mjs  build-seed.ts  build-stats.mjs  darko-probe.mjs  data-probe.mjs  draft-probe.mjs  probe-capholds.mjs  probe-contracts.mjs  probe-darko-fields.mjs  probe-darko-fresh.mjs  probe-darko-history.mjs  probe-darko.mjs  tw-probe.mjs  (+7 more)
(+102 files in other folders)
